@@ -1,4 +1,8 @@
 Version 1.3.11+svn:
+ * WML engine:
+   * New standard unit filter keys :
+     - defense: chance to be hit on current terrain by normal weapons
+     - movement_cost: movement cost on current terrain
  * miscellaneous and bug fixes:
    * fix a compilation bug on Windows (usleep not defined)
  * language and i18n:
